--- a/20180212-housing/components/sass/_st_override.scss
+++ b/20180212-housing/components/sass/_st_override.scss
@@ -17,12 +17,12 @@ body,
     margin-right: auto;
 }
 
+.index {
+    font-weight:900 !important;
+}
+
 #map {
-<<<<<<< HEAD
-    height: 353px;
-=======
-    height: 350px;
->>>>>>> origin/master
+    height: 365px;
     width: 100%;
 }
 
@@ -139,11 +139,7 @@ body,
 }
 
 #cities {
-<<<<<<< HEAD
     height:395px;
-=======
-    height: 435px;
->>>>>>> origin/master
     overflow-y: auto;
 }
 
