--- a/20180212-housing/components/css/style.css
+++ b/20180212-housing/components/css/style.css
@@ -2449,23 +2449,23 @@ body,
 }
 
 .orange5 {
-  background-color: #993404;
+  background-color: #a63603;
 }
 
 .orange4 {
-  background-color: #d95f0e;
+  background-color: #e6550d;
 }
 
 .orange3 {
-  background-color: #fe9929;
+  background-color: #fd8d3c;
 }
 
 .orange2 {
-  background-color: #fec44f;
+  background-color: #fdbe85;
 }
 
 .orange1 {
-  background-color: #fee391;
+  background-color: #feedde;
 }
 
 .mapboxgl-ctrl-attrib {
