--- a/20180212-housing/components/sass/_st_base.scss
+++ b/20180212-housing/components/sass/_st_base.scss
@@ -98,7 +98,7 @@
    :focus { outline:0; }
    
 /*BREAKER*/
-  .breaker { clear:both; margin: 3em 0 4em 0; padding:1;border-bottom:1px solid #ccc; }
+  .breaker { clear:both; margin: 3em 0 4em 0; padding:1;}
 
 /*RESET BUTTON*/
   .zoom{ text-decoration:none; font-weight:normal !important; color:steelblue; float:right !important; font-family: $bentonSans !important; }
