--- a/20180212-housing/components/sass/_st_override.scss
+++ b/20180212-housing/components/sass/_st_override.scss
@@ -91,26 +91,32 @@ body,
 .orange5 .value {
     color: #ffffff !important;
 }
-
 .orange5 {
-    background-color: #a63603;
+    // background-color: #993404;
+    background-color:#118241;
 }
 
 .orange4 {
-    background-color: #e6550d;
+    // background-color: #d95f0e;
+    background-color: #299e3d;
 }
 
 .orange3 {
-    background-color: #fd8d3c;
+    // background-color: #fe9929;
+    background-color:#5bbf48;
 }
 
 .orange2 {
-    background-color: #fdbe85;
+    // background-color: #fec44f;
+    background-color: #9ee384;
 }
 
-
 .orange1 {
-    background-color: #feedde;
+    // background-color: #fee391;
+    background-color:#c7e5b5;
+}
+.orange35 {
+     background-color:#bf7f63;
 }
 
 .mapboxgl-ctrl-attrib {
