--- a/20180212-housing/builds/development/css/style.css
+++ b/20180212-housing/builds/development/css/style.css
@@ -2398,6 +2398,7 @@ body,
   line-height: 120%;
   text-align: center;
   height: 18px;
+  padding-top: 2px;
 }
 
 .cell:hover,
@@ -2432,8 +2433,7 @@ body,
 
 .chartTitle {
   color: #333;
-  font-family: "Whitman Display Condensed Bold", Georgia, Times, serif;
-  font-size: 42px;
+  font-size: 36px;
   line-height: 42px;
   margin-top: 12px;
 }
@@ -2480,8 +2480,7 @@ body,
 }
 
 .chatter {
-  font-family: "Poynter Serif RE", Georgia, Times, serif;
-  font-size: 18px;
+  font-size: 14px;
   line-height: 22px;
   padding-right: 20px;
   margin-top: 3px;
@@ -2616,7 +2615,7 @@ h5 {
 }
 
 .metricCol div {
-  padding: 1px;
+  padding: 3px;
 }
 
 .metric {
@@ -2641,8 +2640,12 @@ h5 {
 }
 
 #chartHead {
-  font-size: 1.1em;
+  font-size: 1em;
   margin-top: 2.5em;
+}
+
+#chartHead > div {
+  padding: 5px;
 }
 
 /*#income {
