--- a/20180212-housing/components/sass/_st_override.scss
+++ b/20180212-housing/components/sass/_st_override.scss
@@ -47,6 +47,7 @@ body,
     line-height: 120%;
     text-align: center;
     height: 18px;
+    padding-top:2px;
 }
 
 .cell:hover,
@@ -77,8 +78,8 @@ body,
 .rowHead {padding:1em 0;width:90%;}
 .chartTitle {
     color: #333;
-    font-family: "Whitman Display Condensed Bold", Georgia, Times, serif;
-    font-size: 42px;
+    // font-family: "Whitman Display Condensed Bold", Georgia, Times, serif;
+    font-size: 36px;
     line-height: 42px;
     margin-top: 12px;
 }
@@ -128,8 +129,8 @@ body,
 }
 
 .chatter {
-    font-family: "Poynter Serif RE", Georgia, Times, serif;
-    font-size: 18px;
+    // font-family: "Poynter Serif RE", Georgia, Times, serif;
+    font-size: 14px;
     line-height: 22px;
     padding-right: 20px;
     margin-top: 3px;
@@ -265,7 +266,7 @@ h5 {
 }
 
 .metricCol div {
-    padding: 1px;
+    padding: 3px;
 }
 
 .metric {
@@ -290,10 +291,10 @@ h5 {
 }
 
 #chartHead {
-    font-size: 1.1em;
+    font-size: 1em;
     margin-top: 2.5em;
 }
-
+#chartHead>div{padding:5px;}
 
 /*#income {
   font-weight:900;
