--- a/20180212-housing/components/sass/_st_override.scss
+++ b/20180212-housing/components/sass/_st_override.scss
@@ -23,17 +23,18 @@ body,
 }
 
 .slide {
-    display:none;
+    display: none;
 }
 
- .name, .score {
-    pointer-events:none !important;
- }
+.name,
+.score {
+    pointer-events: none !important;
+}
 
 .value {
     font-weight: normal !important;
     display: none;
-    font-size:.9em;
+    font-size: .9em;
 }
 
 .hideme {
@@ -47,7 +48,7 @@ body,
     line-height: 120%;
     text-align: center;
     height: 18px;
-    padding-top:2px;
+    padding-top: 2px;
 }
 
 .cell:hover,
@@ -68,17 +69,21 @@ body,
 
 .th {
     vertical-align: top;
-    height: auto;
-    // font-size: 0.9em;
+    height: auto; // font-size: 0.9em;
 }
 
 .listrow {
     padding: 2px;
 }
-.rowHead {padding:1em 0;width:90%;}
+
+.rowHead {
+    padding: 1em 0;
+    width: 90%;
+}
+
 .chartTitle {
-    color: #333;
-    // font-family: "Whitman Display Condensed Bold", Georgia, Times, serif;
+    color: #333; // font-family: "Whitman Display Condensed Bold", Georgia, Times, serif;
+    font-weight: bold;
     font-size: 36px;
     line-height: 42px;
     margin-top: 12px;
@@ -92,9 +97,10 @@ body,
 .orange5 .value {
     color: #ffffff !important;
 }
+
 .orange5 {
     // background-color: #993404;
-    background-color:#118241;
+    background-color: #118241;
 }
 
 .orange4 {
@@ -104,7 +110,7 @@ body,
 
 .orange3 {
     // background-color: #fe9929;
-    background-color:#5bbf48;
+    background-color: #5bbf48;
 }
 
 .orange2 {
@@ -114,10 +120,11 @@ body,
 
 .orange1 {
     // background-color: #fee391;
-    background-color:#c7e5b5;
+    background-color: #c7e5b5;
 }
+
 .orange35 {
-     background-color:#bf7f63;
+    background-color: #bf7f63;
 }
 
 .mapboxgl-ctrl-attrib {
@@ -132,7 +139,7 @@ body,
     // font-family: "Poynter Serif RE", Georgia, Times, serif;
     font-size: 14px;
     line-height: 22px;
-    padding-right: 20px;
+    padding-right: 80px;
     margin-top: 3px;
 }
 
@@ -160,6 +167,10 @@ body,
     margin-bottom: 3px;
     display: inline-block;
     font-size: 15px;
+}
+
+.legendary.orange1 {
+    color: #333;
 }
 
 .byline {
@@ -197,8 +208,7 @@ body,
 .th,
 .th2 {
     padding: 1px;
-    font-weight: 600;
-    // text-transform: uppercase
+    font-weight: 600; // text-transform: uppercase
 }
 
 .th:hover,
@@ -294,7 +304,11 @@ h5 {
     font-size: 1em;
     margin-top: 2.5em;
 }
-#chartHead>div{padding:5px;}
+
+#chartHead>div {
+    padding: 5px;
+}
+
 
 /*#income {
   font-weight:900;
@@ -420,7 +434,9 @@ h5 {
     #chart svg {
         height: 200px;
     }
-
+    .chatter {
+        padding-right: 10px;
+    }
     #listing,
     #metrics {
         float: none;
