--- a/20160218-adverse_events/components/css/style.css
+++ b/20160218-adverse_events/components/css/style.css
@@ -1843,7 +1843,7 @@ header[role="banner"] {
 }
 
 body {
-  font-family: "Benton Sans", Helvetica, Arial, sans-serif;
+  font-family: "Benton Sans Condensed Medium", Helvetica, Arial, sans-serif !important;
 }
 
 #header {
@@ -1853,6 +1853,15 @@ body {
 #events {
   overflow-y: auto;
   height: 280px;
+}
+
+.legendary {
+  padding: 4px;
+  color: #fff;
+  font-weight: bold;
+  border-radius: 5px;
+  padding: 0 7px;
+  margin-bottom: 3px;
 }
 
 .byline {
