--- a/20160218-adverse_events/components/css/style.css
+++ b/20160218-adverse_events/components/css/style.css
@@ -1869,6 +1869,7 @@ body {
   font-weight: 400;
   font-size: 0.6em;
   color: #888;
+  line-height: 140%;
   padding-top: 10px;
   padding-bottom: 10px;
   text-align: left;
