--- a/20160218-adverse_events/components/sass/_st_override.scss
+++ b/20160218-adverse_events/components/sass/_st_override.scss
@@ -3,7 +3,7 @@
     width: 100%;
 }
 
-body {
+body, .chatter, .chartTitle {
     font-family: "Benton Sans Condensed Medium", Helvetica, Arial, sans-serif !important;
 }
 
