--- a/20160218-adverse_events/components/css/style.css
+++ b/20160218-adverse_events/components/css/style.css
@@ -1846,6 +1846,10 @@ body, .chatter, .chartTitle {
   font-family: "Benton Sans Condensed Medium", Helvetica, Arial, sans-serif !important;
 }
 
+.chatter {
+  line-height: 140%;
+}
+
 #header {
   margin-bottom: 10px;
 }
