--- a/20180408-stripzone/styles/_project.scss
+++ b/20180408-stripzone/styles/_project.scss
@@ -731,12 +731,12 @@ questions: http://www.webtype.com
 
 /*GREY SHADED RAMP*/
 .gray1 {
-  fill: #ddd;
+  fill: #f7f7f7;
   background-color: #ddd;
 }
 
 .gray2 {
-  fill: #CCC;
+  fill: #cccccc;
   background-color: #CCC;
 }
 
@@ -746,7 +746,7 @@ questions: http://www.webtype.com
 }
 
 .gray4 {
-  fill: #636363;
+  fill: #525252;
   background-color: #636363;
   color: #fff;
 }
