--- a/20171022-bikelanes/builds/development/css/style.css
+++ b/20171022-bikelanes/builds/development/css/style.css
@@ -2392,62 +2392,62 @@ header[role="banner"] {
 }
 
 body {
-  overflow-x: hidden;
+    overflow-x: hidden;
 }
 
 #wrapper {
-  width: 520px;
-  margin-left: auto;
-  margin-right: auto;
+    width:520px;
+    margin-left:auto;
+    margin-right:auto;
 }
 
 .map {
-  width: 100%;
-  height: 400px;
+    width: 100%;
+    height:400px;
 }
 
 .chatter {
-  line-height: 180%;
+    line-height:180%;
 }
 
 .steelblue {
-  background-color: #C6D1D9;
+    background-color:#C6D1D9;
 }
 
 .legendary {
-  padding: 3px;
-  font-weight: 900;
-  color: #ffffff;
+    padding:4px;
+    color: #fff;
+    font-weight:bold;
+    border-radius: 5px;
+    padding: 0 7px;
+    margin-bottom: 3px;
 }
 
 .full {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  width: 100%;
+    position:absolute; top:0; bottom:0; width:100%; height:auto !important;
 }
 
 .byline {
-  font-family: "Benton Sans", Helvetica, Arial, sans-serif;
-  font-weight: 400 !important;
-  font-size: 0.6em !important;
-  color: #888 !important;
-  line-height: 140%;
-  padding-top: 10px !important;
-  padding-bottom: 10px !important;
-  text-align: left !important;
+    font-family: "Benton Sans", Helvetica, Arial, sans-serif;
+    font-weight: 400 !important;
+    font-size:0.6em !important;
+    color: #888 !important;
+    line-height:140%;
+    padding-top:10px !important;
+    padding-bottom:10px !important;
+    text-align:left !important;
 }
 
 .mapboxgl-ctrl-attrib, .mapboxgl-ctrl-compass, .mapboxgl-ctrl-logo {
-  display: none !important;
+    display:none !important;
 }
 
 .chart .c3-line {
-  stroke-width: 6px !important;
+    stroke-width: 6px !important;
 }
 
-@media (max-width: 520px) {
-  #wrapper {
-    width: 100%;
-  }
+@media (max-width:520px) {
+    #wrapper {
+        width:100%;
+    }
 }
