--- a/20171022-bikelanes/components/sass/_st_override.scss
+++ b/20171022-bikelanes/components/sass/_st_override.scss
@@ -10,7 +10,6 @@ body {
 
 .map {
     width: 100%;
-    height: 400px;
 }
 
 .chatter {
@@ -22,13 +21,16 @@ body {
 }
 
 .legendary {
-    padding:3px;
-    font-weight:900;
-    color:#ffffff;
+    padding:4px;
+    color: #fff;
+    font-weight:bold;
+    border-radius: 5px;
+    padding: 0 7px;
+    margin-bottom: 3px;
 }
 
 .full {
-    position:absolute; top:0; bottom:0; width:100%;
+    position:absolute; top:0; bottom:0; width:100%; height:auto !important;
 }
 
 .byline {
