--- a/20180805-ash/templates/_index-content.svelte.html
+++ b/20180805-ash/templates/_index-content.svelte.html
@@ -26,13 +26,13 @@
 
       <div id="remove" class="slide">
         <div class="chartTitle">Replacing infected ash trees</div>
-        <div class="chatter">Shows the removal of ash trees per half mile in St. Paul from 2010 to 2017. Shaded from <span class="legendary red1">less</span> to <span class="legendary red5">more</span></div>
+        <div class="chatter">Shows the removal of ash trees per mile in St. Paul from 2010 to 2017. Shaded from <span class="legendary red1">less</span> to <span class="legendary red5">more</span></div>
 
         <div id="mapRemove" class="map"></div>
 
         <div class="breaker"></div>
 
-        <div class="chatter">Shows the planting of new trees to replace removed ash trees per half mile in St. Paul from 2010 to 2017. Shaded from <span class="legendary blue1">less</span> to <span class="legendary blue5">more</span></div>
+        <div class="chatter">Shows the planting of new trees to replace removed ash trees per mile in St. Paul from 2010 to 2017. Shaded from <span class="legendary blue1">less</span> to <span class="legendary blue5">more</span></div>
 
         <div id="mapReplace" class="map"></div>
 
