--- a/20180805-ash/styles/_project.scss
+++ b/20180805-ash/styles/_project.scss
@@ -29,6 +29,10 @@
   margin:17px;
 }
 
+.slide { 
+  display:none;
+}
+
 .mapboxgl-ctrl-logo, .mapboxgl-ctrl-bottom-right {
   display:none !important;
 }
